sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a=0
 while(a=0)
  for(i<-0 to getNombreValeurs()-2) {
    if (!plusPetit(i,i+1)) {
      echange(i,i+1)
    }
    else {
      a+=1
    }
  }
}